Shorten build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 build_scripts/*
 !build_scripts/build_all.sh
 !build_scripts/build_ffmpeg.sh
+!build_scripts/build_ffmpeg_for_macos.sh
 !build_scripts/ffmpeg-3.3.2.tar.bz2
 */include/
 */lib/
