--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ defaults: &defaults
   docker:
     - image: vnkhangnt/buildpack-deps:trusty
   steps:
-      - checkout
+      - run: git clone https://github.com/Khang-NT/ffmpeg-binary-android.git ~/source --depth=1
       - run:
           name: Compile FFmpeg
           command: |
