--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,6 @@ workflows:
           - build_arm_x86
           - build_arm_x86_64
           - build_native_linux
-        filters:
-            branches:
-              only: master
+        # filters:
+        #     branches:
+        #       only: master
