--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ defaults: &defaults
             - $TARGET/lite
 
 jobs:
-  build_arm:
+  build:
     environment:
       TARGET: arm
     << : *defaults
@@ -71,9 +71,9 @@ jobs:
 
 workflows:
   version: 2
-  build_and_create_release:
+  build-and-create-release:
     jobs:
-      - build_arm
+      - build
       - build_arm_v7a
       - build_arm_v7a_neon
       - build_arm_v8a
@@ -82,7 +82,7 @@ workflows:
       - build_native_linux
       - create_release:
         requires:
-          - build_arm
+          - build
           - build_arm_v7a
           - build_arm_v7a_neon
           - build_arm_v8a
