Extract compressed files in silent

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ defaults: &defaults
           command: |
             mkdir -p artifacts/$TARGET;
             mkdir -p build_scripts/build_dir
-            cd build_scripts && ./build_ffmpeg.sh $TARGET build_dir ../artifacts/$TARGET;
+            cd build_scripts && ./build_ffmpeg.sh $TARGET $(pwd)/build_dir ../artifacts/$TARGET;
       # - run: todo: copy log files
       #     name: Copy error report
       #     command: 
