--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ defaults: &defaults
   steps:
       - run: 
           name: Checkout
-          command: git clone https://github.com/Khang-NT/ffmpeg-binary-android.git ~/source --depth=1
+          command: git clone -b $CIRCLE_BRANCH https://github.com/Khang-NT/ffmpeg-binary-android.git ~/source --depth=1
       - run:
           name: Compile FFmpeg
           command: |
