--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@ version: 2
 
 defaults: &defaults
   working_directory: ~/source
-  environment:
-      FFMPEG_VERSION: 3.4.2
   docker:
       - image: vnkhangnt/buildpack-deps:trusty
+          environment:
+            FFMPEG_VERSION: 3.4.2
   steps:
       - checkout
       - run:
@@ -19,7 +19,7 @@ defaults: &defaults
           name: Copy error report
           command: |
             mkdir -p build_logs/ffmpeg; 
-            cp build_scripts/ffmpeg-$FFMPEG_VERSION/config.log build_logs/ffmpeg/;
+            cp build_scripts/ffmpeg-$FFMPEG_VERSION/config.log build_logs/ffmpeg/ || true;
           when: on_fail
       - store_artifacts:
           path: build_logs
