--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ defaults: &defaults
           name: Compile FFmpeg
           command: |
             mkdir -p build_logs;
-            mkdir -p artifacts/$TARGET;
-            mkdir -p build_scripts/build_dir
-            cd build_scripts && ./build_ffmpeg.sh $TARGET $(pwd)/build_dir $(pwd)/../artifacts/$TARGET;
+            export FINAL_DIR=$(pwd)/artifacts/$TARGET;
+            export BUILD_DIR=$(pwd)/build_scripts/build_dir && mkdir -p $BUILD_DIR;
+            ./build_scripts/build_ffmpeg.sh $TARGET $BUILD_DIR $FINAL_DIR;
       - run: 
           name: Copy error report
           command: |
@@ -26,8 +26,7 @@ defaults: &defaults
       - persist_to_workspace:
           root: artifacts
           paths:
-            - $TARGET/full
-            - $TARGET/lite
+            - $TARGET
 
 jobs:
   build_arm:
