--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,6 +112,7 @@ workflows:
             - build_arm_x86
             - build_arm_x86_64
             - build_native_linux
+            - hold
           filters:
             branches:
               only: master
