--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,8 @@ workflows:
       - build_arm_x86
       - build_arm_x86_64
       - build_native_linux
-      - create_release:
+      - hold:
+          type: approval
           requires:
             - build_arm
             - build_arm_v7a
@@ -112,6 +113,8 @@ workflows:
             - build_arm_x86
             - build_arm_x86_64
             - build_native_linux
+      - create_release:
+          requires:
             - hold
           filters:
             branches:
