--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ defaults: &defaults
           name: Copy error report
           command: |
             mkdir -p build_logs/ffmpeg; 
-            cp build_scripts/ffmpeg-$FFMPEG_VERSION/config.log build_logs/ffmpeg/ || true;
+            cp ffmpeg-$FFMPEG_VERSION/config.log build_logs/ffmpeg/ || true;
           when: on_fail
       - store_artifacts:
           path: build_logs
